--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,44 @@
+/* General Stylings */
+
 body {
     font-family: 'Raleway', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #666;
+}
+
+li {
+    list-style-type: none; /*removes bullet dots from the list */
+}
+
+a {
+    text-decoration-line: none;
+    color: inherit;
+}
+
+/* Styling of header */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    align-items: center;
+    background-color: #ffffff99;
+    border-bottom: solid 1px #dddddd;
+}
+
+.brand {
+    margin: 0 0 0 15%;
+    font-size: 24px;
+
+}
+
+nav {
+    margin-right: 15%;
+}
+.nav-links {
+    padding: 0;
+    display: flex;
+    gap: 30px;
+    font-size: 16px;
 }
