--- a/css/style.css
+++ b/css/style.css
@@ -176,3 +176,14 @@ nav {
 .action-text p {
     padding-bottom: 24px;
 }
+
+/* styling of copyright secyion */
+
+footer {
+    background-color: #ddd;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
