--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ a {
     border: solid 2px #fff;
     padding: 8px 20px;
     border-radius: 20px;
+    transition: background-color 0.5s ease-out 100ms;
 }
 
 .button-gray {
@@ -27,6 +28,17 @@ a {
     padding: 8px 20px;
     border-radius: 20px;
     margin-left: 16px;
+    transition: background-color 0.5s ease-out 100ms;
+}
+
+.button:hover {
+    background-color: #ffffff99;
+    font-weight: 700;
+}
+
+.button-gray:hover {
+    background-color: #dddddd99;
+    font-weight: 700;
 }
 
 /* Styling of header */
